# TB_solve

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  intro.rst  requirements.txt  tb_solve.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tb_solve.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  intro.doctree  modules.doctree  tb_solve.doctree
docs/_build/html/.doctrees/tutorials/: graphene_example.doctree  index.doctree  solver_utilities.doctree  sparse_solver.doctree
docs/_build/html/.doctrees/usage/: index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tb_solve/: Solver.html  utils.html
docs/_build/html/_sources/: index.rst.txt  intro.rst.txt  modules.rst.txt
docs/_build/html/_sources/tutorials/: graphene_example.rst.txt  index.rst.txt  sparse_solver.rst.txt
docs/_build/html/tutorials/: graphene_example.html  index.html  solver_utilities.html  sparse_solver.html
docs/_build/html/usage/: index.html
docs/tutorials/: graphene_density_matrix.py  graphene_example.rst  index.rst  solver_utilities.py  solver_utilities.rst  sparse_solver.rst
docs/usage/: index.rst
examples/: tutorial_graphene_density_matrix.py  tutorial_solver_utilities.py  tutorial_sparse_solve.py
src/: Solver.py
src/tb_solve/: Solver.py  __init__.py  utils.py
