[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tb_solve"
version = "0.1.0"
authors = [
  { name="Daniel Palmer", email="dpalmer@example.com" },
]
description = "Python solver library for tight binding models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.10.0",
    "scipy",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/dpalmer/TB_solve"
"Bug Tracker" = "https://github.com/dpalmer/TB_solve/issues"

[tool.setuptools.packages.find]
where = ["src"]

